tests/ui/closures/2229_closure_analysis/diagnostics/union.stderr
error[E0506]: cannot assign to `a.y` because it is borrowed
  --> $DIR/union.rs:20:5
   |
LL |     let mut c = || {
   |                 -- `a.y` is borrowed here
...
LL |         let _ = &mut a;
   |                      - borrow occurs due to use in closure
...
LL |     a.y = 1;
   |     ^^^^^^^ `a.y` is assigned to here but it was already borrowed
...
LL |     c();
   |     - borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0506`.
